atualizado swagger com atualização de filmes
